# mkdocs-external-custom-emojis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  emoji-config.toml  emoji-config.toml.example  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml  test.yml
docs/: index.md  test.md
docs/development/: contributing.md
docs/getting-started/: configuration.md  deployment.md  installation.md  quickstart.md
docs/user-guide/: cli.md
mkdocs_external_emojis/: __init__.py  cli.py  config.py  constants.py  emoji_index.py  models.py  plugin.py
mkdocs_external_emojis/providers/: __init__.py  base.py  discord.py  slack.py
mkdocs_external_emojis/sync/: __init__.py  cache.py  downloader.py  manager.py
tests/: conftest.py  test_models.py
tests/integration/: conftest.py  test_docs_build.py
tests/unit/: conftest.py  test_base_provider.py  test_cache.py  test_cli.py  test_config.py  test_discord_provider.py  test_emoji_index.py  test_slack_provider.py
