[project]
name = "mkdocs-external-custom-emojis"
version = "0.3.1"
description = "Sync custom emojis from external providers (Slack, etc.) into MkDocs Material"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Julie Dujardin", email = "julie@dujardin.pw" }
]
keywords = ["mkdocs", "emoji", "slack", "material", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.4.0",
    "requests>=2.31.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "pillow>=10.0.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://mkdocs-emoji.julie.is/"
github = "https://github.com/julie-dujardin/mkdocs-external-custom-emojis"

[project.scripts]
mkdocs-emoji = "mkdocs_external_emojis.cli:main"

[project.entry-points."mkdocs.plugins"]
external-emojis = "mkdocs_external_emojis.plugin:ExternalEmojisPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mkdocs_external_emojis"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mkdocs_external_emojis"]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "requests-mock>=1.12.1",
    "ruff>=0.15.0",
    "ty>=0.0.15",
]
docs = [
    "mkdocs-mermaid2-plugin>=1.2.3",
]
